<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/my_bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".CreateCard">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_task"
        android:textColor="@color/Background"
        android:textStyle="bold"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="@font/anaheim"/>
    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:background="@drawable/card_bg"
        android:textColorHint="@color/Background"
        android:textColor="@color/Background"
        />

    <EditText
        android:id="@+id/create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:background="@drawable/card_bg"
        android:textColorHint="@color/Background"
        android:textColor="@color/Background"
        />

    <Spinner
        android:id="@+id/priority"
        android:entries="@array/priority"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_bg"
        android:layout_height="55dp" />


    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Accent"
        android:textColor="@color/Background"
        android:text="@string/save"/>



</LinearLayout>