<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/my_bg_gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anaheim"
            android:textStyle="bold"
            android:text="@string/your_tasks"
            android:textColor="@color/Background"
            android:textSize="40sp" />
        <Button
            android:id="@+id/deleteAll"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Red"
            android:text="@string/x"
            android:textAllCaps="false"
            android:textColor="@color/Background"
            />
    </LinearLayout>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/card_bg"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="829dp"
            tools:listitem="@layout/task_view" />

        <Button
            android:id="@+id/add"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/Accent"
            android:text="@string/plus"
            android:textColor="@color/Background"
            android:textSize="25sp" />
    </FrameLayout>
</LinearLayout>



